--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: java
 sudo: true
 jdk:
   - oraclejdk8
-cache:
+before_script:
+  - chmod +x gradlew
 script:
   - ./gradlew build
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
