--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: java
 sudo: true
 jdk:
   - oraclejdk8
+install:
+  - gradle wrapper --gradle-version 4.2
 before_script:
   - chmod +x gradlew
 script:
