--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.20'
 }
 
+apply plugin: 'jacoco'
+
 group 'com.github.shynixn'
 version '1.0'
 
