--- a/build.gradle
+++ b/build.gradle
@@ -80,6 +80,6 @@ task downloadDependencies(type:Exec) {
     if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')) {
         commandLine 'cmd', '/c', text
     } else {
-        commandLine 'sh', text
+        commandLine 'sh', '-c', text
     }
 }
