--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ jdk:
   - oraclejdk8
 before_install:
   - chmod +x gradlew
-  - pip install Sphinx
+  - sudo apt-get install python-sphinx
  #- if [[ $TRAVIS_COMMIT_MESSAGE == *"--refresh-dependencies"* ]]; then ./gradlew downloadDependencies --debug ; fi ;
 script:
   - pip install https://github.com/Shynixn/sphinx_rtd_theme/archive/C1.0.zip
