--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,18 @@ jdk:
   - oraclejdk8
 before_install:
   - chmod +x gradlew
-  - sudo apt-get install python-sphinx
+  - sudo apt-get install python3-pip
+  - apt-get install python3-sphinx
  #- if [[ $TRAVIS_COMMIT_MESSAGE == *"--refresh-dependencies"* ]]; then ./gradlew downloadDependencies --debug ; fi ;
 script:
-  - pip install https://github.com/Shynixn/sphinx_rtd_theme/archive/C1.0.zip
+  - pip3 install https://github.com/Shynixn/sphinx_rtd_theme/archive/C1.0.zip
   - ./gradlew generateWikiPages
+  - git config --global user.email "travis@travis-ci.org" && git config --global user.name "Travis CI"
+  - git checkout -b master
+  - git add docs
+  - git commit --message "Travis build: $TRAVIS_BUILD_NUMBER"
+  - git remote add origin-master https://${GH_TOKEN}@github.com/Shynixn/DiscordWebhook-Ktl.git
+  - git push --quiet --set-upstream origin-master master
   - ./gradlew build
   - ./gradlew jacocoTestReport
 after_success:
