--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ jdk:
 before_install:
   - chmod +x gradlew
   - sudo apt-get install python3-pip
-  - apt-get install python3-sphinx
+  - sudo apt-get install python3-sphinx
  #- if [[ $TRAVIS_COMMIT_MESSAGE == *"--refresh-dependencies"* ]]; then ./gradlew downloadDependencies --debug ; fi ;
 script:
   - pip3 install https://github.com/Shynixn/sphinx_rtd_theme/archive/C1.0.zip
