--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,13 @@ jdk:
   - oraclejdk8
 before_install:
   - chmod +x gradlew
- # - sudo apt-get install python3-pip
-  - sudo apt-get install python-sphinx
- # - sudo apt-get install python3-sphinx
+  - sudo apt-get install python3-pip
+  #- sudo apt-get install python-sphinx
+  - sudo apt-get install python3-sphinx
  #- if [[ $TRAVIS_COMMIT_MESSAGE == *"--refresh-dependencies"* ]]; then ./gradlew downloadDependencies --debug ; fi ;
 script:
-  - sudo pip install https://github.com/Shynixn/sphinx_rtd_theme/releases/download/C1.0/sphinx_rtd_theme.zip
-  - ./gradlew generateWikiPages
+  - sudo pip3 install https://github.com/Shynixn/sphinx_rtd_theme/releases/download/C1.0/sphinx_rtd_theme.zip
+  - python3 -msphinx -M html docs/source docs/build
   - git config --global user.email "travis@travis-ci.org" && git config --global user.name "Travis CI"
   - git add docs
   - git commit --message "Travis build $TRAVIS_BUILD_NUMBER"
