--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ before_install:
 script:
   - sudo pip3 install https://github.com/Shynixn/sphinx_rtd_theme/releases/download/C1.0/sphinx_rtd_theme.zip
   - sudo pip3 install -U sphinx
+  - rm -rf docs/build
+  - rm -rf docs/apidocs
   - python3 -msphinx -M html docs/source docs/build
   - git config --global user.email "travis@travis-ci.org" && git config --global user.name "Travis CI"
   - git add docs
