--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script:
   - git config --global user.email "travis@travis-ci.org" && git config --global user.name "Travis CI"
   - git add docs
   - git commit --message "Travis build $TRAVIS_BUILD_NUMBER"
-  - git push --quiet https://Shynixn:$GH_TOKEN@github.com/Shynixn/DiscordWebhook-Ktl.git
+  - git push --quiet https://Shynixn:$GH_TOKEN@github.com/Shynixn/DiscordWebhook-Ktl.git HEAD:master
   - ./gradlew build
   - ./gradlew jacocoTestReport
 after_success:
