Build without ci.

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ script:
   - python3 -msphinx -M html docs/source docs/build
   - git config --global user.email "travis@travis-ci.org" && git config --global user.name "Travis CI"
   - git add docs
-  - git commit --message "Travis build $TRAVIS_BUILD_NUMBER"
+  - git commit --message "Travis build $TRAVIS_BUILD_NUMBER [skip travis-ci]"
   - git push --quiet https://Shynixn:$GH_TOKEN@github.com/Shynixn/DiscordWebhook-Ktl.git HEAD:master
   - ./gradlew build
   - ./gradlew jacocoTestReport
