--- a/.travis.yml
+++ b/.travis.yml
@@ -29,4 +29,6 @@ deploy:
   file: "README.md"
   skip_cleanup: true
   on:
-    tags: true
+    branch: release
+    #condition: $MY_ENV = super_awesome
+    tags: false
