--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ test {
     failFast = true
 
     onOutput { descriptor, event ->
-        logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message )
+        logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message)
     }
 }
 
@@ -50,7 +50,7 @@ jacocoTestReport {
     }
 }
 
-shadowJar{
+shadowJar {
     archiveName = "$baseName-$version.$extension"
 
     relocate 'kotlin', 'com.github.shynixn.petblocks.lib.kotlin'
@@ -104,14 +104,14 @@ uploadArchives {
     repositories {
         mavenDeployer {
             beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-            
+
             repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-                authentication(userName: ossrhUsername, password: ossrhPassword)
+                authentication(userName: findProperty('ossrhUsername'), password: findProperty('ossrhPassword'))
             }
             snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
-                authentication(userName: ossrhUsername, password: ossrhPassword)
+                authentication(userName: findProperty('ossrhUsername'), password: findProperty('ossrhPassword'))
             }
-            
+
             pom.project {
                 name 'DiscordWebhook-Ktl'
                 packaging 'jar'
