--- a/build.gradle
+++ b/build.gradle
@@ -9,62 +9,11 @@ buildscript {
 }
 
 plugins {
-    id 'com.github.johnrengelman.shadow' version '4.0.2'
     id 'org.jetbrains.kotlin.jvm' version '1.3.20'
+    id 'io.codearte.nexus-staging' version '0.20.0'
 }
-
-apply plugin: 'jacoco'
-apply plugin: 'org.jetbrains.dokka'
-apply plugin: 'maven'
-apply plugin: 'signing'
-
-group 'com.github.shynixn'
-version '1.0'
 
 sourceCompatibility = 1.8
-
-repositories {
-    mavenCentral()
-    mavenLocal()
-}
-
-test {
-    useJUnitPlatform()
-    testLogging.showStandardStreams = true
-
-    beforeTest { descriptor ->
-        logger.lifecycle("Running test: " + descriptor)
-    }
-
-    failFast = true
-
-    onOutput { descriptor, event ->
-        logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message)
-    }
-}
-
-jacocoTestReport {
-    reports {
-        xml.enabled true
-        html.enabled false
-    }
-}
-
-shadowJar {
-    archiveName = "$baseName-$version.$extension"
-
-    relocate 'kotlin', 'com.github.shynixn.petblocks.lib.kotlin'
-}
-
-dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    compile group: 'org.apache.cxf', name: 'cxf-rt-rs-client', version: '3.3.0'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'
-
-    testCompile 'org.mockito:mockito-core:2.23.0'
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.3.1'
-    testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.3.1'
-}
 
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
@@ -73,7 +22,26 @@ compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
 
-// Publish to Maven Central
+apply plugin: 'jacoco'
+apply plugin: 'org.jetbrains.dokka'
+apply plugin: 'maven'
+apply plugin: 'signing'
+
+group 'com.github.shynixn'
+version '1.1'
+
+test {
+    useJUnitPlatform()
+    testLogging.showStandardStreams = true
+    failFast = true
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        html.enabled false
+    }
+}
 
 task sourceJar(type: Jar) {
     classifier "sources"
@@ -91,7 +59,7 @@ task javadocJar(type: Jar, dependsOn: dokkaJavadoc) {
 }
 
 artifacts {
-    archives shadowJar
+    archives jar
     archives sourceJar
     archives javadocJar
 }
@@ -141,4 +109,19 @@ uploadArchives {
             }
         }
     }
+}
+
+repositories {
+    mavenCentral()
+    mavenLocal()
+}
+
+dependencies {
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    compile group: 'org.apache.cxf', name: 'cxf-rt-rs-client', version: '3.3.0'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'
+
+    testCompile 'org.mockito:mockito-core:2.23.0'
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.3.1'
+    testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.3.1'
 }
